CSCE434/pp4/samples/jon_inherit2.out

*** Error line 10.
  int get_value() { return value }
                                 ^
*** syntax error

